--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,5 +25,5 @@ jobs:
       run: dotnet test --no-build --verbosity normal
     - name: Codecov
       uses: codecov/codecov-action@v2.1.0
-      with:
-        file:"C:\Users\User\Homework-.NET\Home_work_1\1.xml"
+      with: 
+        file: "‪‪C:\Users\User\Homework-.NET"
