--- a/Calculator_tests1/Calculator_tests1.csproj
+++ b/Calculator_tests1/Calculator_tests1.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Homework_1\Homework_1.csproj" />
+      <ProjectReference Include="..\IL_library_\IL_library_.ilproj" />
     </ItemGroup>
 
 </Project>
