--- a/Homework_1/Homework_1.csproj
+++ b/Homework_1/Homework_1.csproj
@@ -5,4 +5,8 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\IL_library_\IL_library_.ilproj" />
+    </ItemGroup>
+
 </Project>
