--- a/Homework_1/Homework_1.csproj
+++ b/Homework_1/Homework_1.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\F_Calculator\F_Calculator.fsproj" />
       <ProjectReference Include="..\IL_library_\IL_library_.ilproj" />
     </ItemGroup>
 
