--- a/Homework_1/Homework_1.csproj
+++ b/Homework_1/Homework_1.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\F_Calculator\F_Calculator.fsproj" />
+      <ProjectReference Include="..\Homework_4\F_Calculator\F_Calculator.fsproj" />
     </ItemGroup>
 
 </Project>
