--- a/Homework_1/Homework_1.csproj
+++ b/Homework_1/Homework_1.csproj
@@ -8,6 +8,7 @@
     <ItemGroup>
       <ProjectReference Include="..\F_Calculator\F_Calculator.fsproj" />
       <ProjectReference Include="..\Homework_4\F_Calculator\F_Calculator.fsproj" />
+      <ProjectReference Include="..\Homework_5\F_Calculator_RCE\F_Calculator_RCE.fsproj" />
     </ItemGroup>
 
 </Project>
